update: implement menu

--- a/implement-a-complete-web-page/index.html
+++ b/implement-a-complete-web-page/index.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <div id="wrapper">
-      <header id="header">
+      <header id="header" class="mb-5">
         <span>Kasir Barati</span>
       </header>
       <nav id="menu">
         <div id="nav-menu">
           <ul id="nav-menu-list">
-            <li class="active"><a href="#" class="nav-menu-link">WhoAmI</a></li>
+            <li><a href="#" class="nav-menu-link active">WhoAmI</a></li>
             <li>
               <a href="#" class="nav-menu-link">WhereAmI</a>
             </li>
