update: sidebar implemented

--- a/implement-a-complete-web-page/index.html
+++ b/implement-a-complete-web-page/index.html
@@ -32,7 +32,7 @@
         <aside id="navbar">
           <ul>
             <li>
-              <a href="#">Books</a>
+              <a href="#" class="top-border-radius">Books</a>
               <ul class="pl-25">
                 <li>
                   <a href="#" class="my-10">Economy</a>
@@ -141,7 +141,27 @@
             </div>
           </div>
         </div>
-        <aside id="sidebar"></aside>
+        <aside id="sidebars">
+          <div class="sidebar">
+            <div class="sidebar-header top-border-radius">
+              <a href="#">Latest articles</a>
+            </div>
+            <div class="sidebar-content p-5">Something</div>
+          </div>
+          <div class="sidebar">
+            <div class="sidebar-header"><a href="#">Latest activities</a></div>
+            <div class="sidebar-content p-5">
+              <ul class="sidebar-content-list">
+                <li class="sidebar-content-list-item mb-5 pb-5">
+                  <a href="#">Leaders makes mistake. Leaders makes mistake</a>
+                </li>
+                <li class="sidebar-content-list-item mb-5 pb-5">
+                  <a href="#">Leaders makes mistake</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </aside>
       </main>
       <footer id="footer"></footer>
     </div>
