--- a/implement-a-complete-web-page/index.html
+++ b/implement-a-complete-web-page/index.html
@@ -28,7 +28,7 @@
           </ul>
         </div>
       </nav>
-      <main id="main">
+      <main id="main" class="mb-5">
         <aside id="navbar">
           <ul>
             <li>
@@ -163,7 +163,7 @@
           </div>
         </aside>
       </main>
-      <footer id="footer"></footer>
+      <footer id="footer">Copyleft by Kasir Barati 2022</footer>
     </div>
   </body>
 </html>
