update: add max length validator to the signup form

--- a/forms/index.html
+++ b/forms/index.html
@@ -93,7 +93,12 @@
           <label for="bio">Bio</label>
         </div>
         <div class="form-input">
-          <textarea name="bio" id="bio" class="textarea"></textarea>
+          <textarea
+            name="bio"
+            id="bio"
+            class="textarea"
+            maxlength="500"
+          ></textarea>
         </div>
       </div>
       <div class="form-buttons">
