update: select the default option in marriage status

--- a/forms/index.html
+++ b/forms/index.html
@@ -68,7 +68,7 @@
         </div>
         <div class="form-input">
           <select name="marriageStatus" id="marriageStatus" class="dropdown">
-            <option value="#">Choose one ...</option>
+            <option value="#" selected="selected">Choose one ...</option>
             <option value="single">Single</option>
             <option value="divorced">Divorced</option>
             <option value="married">Married</option>
