update: define the default radio button in the gender

--- a/forms/index.html
+++ b/forms/index.html
@@ -45,7 +45,13 @@
         <div class="form-input">
           <div class="form-input-radio">
             <label for="genderOther">Other</label>
-            <input type="radio" name="gender" id="genderOther" value="other" />
+            <input
+              type="radio"
+              name="gender"
+              id="genderOther"
+              value="other"
+              checked="checked"
+            />
           </div>
           <div class="form-input-radio">
             <label for="genderFemale">Female</label>
