update: make form-input class flex

--- a/forms/index.html
+++ b/forms/index.html
@@ -53,7 +53,7 @@
               checked="checked"
             />
           </div>
-          <div class="form-input-radio">
+          <div class="form-input-radio ml-5">
             <label for="genderFemale">Female</label>
             <input
               type="radio"
@@ -62,7 +62,7 @@
               value="female"
             />
           </div>
-          <div class="form-input-radio">
+          <div class="form-input-radio ml-5">
             <label for="genderMale">Male</label>
             <input type="radio" name="gender" id="genderMale" value="male" />
           </div>
