update: add avatar form field section

--- a/forms/index.html
+++ b/forms/index.html
@@ -107,6 +107,12 @@
           ></textarea>
         </div>
       </div>
+      <div class="form-field my-5">
+        <div class="form-label">Avatar</div>
+        <div class="form-input">
+          <input type="file" name="avatar" id="avatar" class="file-uploader" />
+        </div>
+      </div>
       <div class="form-buttons">
         <input type="reset" value="Reset" class="form-button bg-primary" />
         <input type="submit" value="Submit" class="form-button bg-success" />
